--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,8 @@
 html,
 body {
   padding: 0;
+  background-color: #1e1e1e;
+  color: white;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
