Add intro text to timeline

--- a/styles/TimelineEvent.module.css
+++ b/styles/TimelineEvent.module.css
@@ -21,6 +21,10 @@ div.accordion::before {
   margin: 0;
 }
 
+.markdownContent > p {
+  font-weight: normal;
+}
+
 .markdownContent img {
   max-width: 100%;
 }
