--- a/styles/TimelinePage.module.css
+++ b/styles/TimelinePage.module.css
@@ -2,8 +2,21 @@
   background-color: #eaeaea;
 }
 
-.container > h1 {
-  padding: 1em;
+.introContainer {
+  margin: 0 10px;
+  padding-top: 30px;
+}
+
+.introCard {
+  border-top: 3px solid #e10c16;
+  margin: auto;
+  padding: 20px;
+  max-width: 800px;
+  line-height: 1.6;
+}
+
+.introCard > h1 {
+  padding: 0;
   margin: 0;
   text-align: center;
 }
