--- a/styles/Countdown.module.css
+++ b/styles/Countdown.module.css
@@ -5,12 +5,12 @@
 }
 
 .box {
-  flex-direction: column;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 10rem;
-  width: 10rem;
+  flex-direction: column !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  height: 10rem !important;
+  width: 10rem !important;
   text-align: center;
   background-color: #eb4034;
   box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.26);
@@ -23,4 +23,19 @@
   position: absolute;
   margin-top: 6rem;
   color: white;
+}
+
+@media (max-width: 700px) {
+  .box {
+    height: 80px !important;
+    width: 80px !important;
+  }
+  .p {
+    font-size: 14px !important;
+    margin-bottom: 3rem !important;
+  }
+  .integer {
+    font-size: 1.8rem !important;
+    margin-bottom: 1.1rem !important;
+  }
 }
