--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -44,6 +44,13 @@
   margin-top: 4rem;
   font-size: 1.5rem;
   color: white;
-  font-size: 8;
   font-family: LatoRegular;
+}
+
+@media (max-width: 900px) {
+  .description {
+    font-size: 1.2rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
+  }
 }
