--- a/styles/Member.module.css
+++ b/styles/Member.module.css
@@ -2,9 +2,11 @@
   margin: 0 40px;
 }
 
-.verticleLine {
-  border-top: 2px solid white;
-  margin-top: 70px;
+.verticalLine {
+  height: 10px;
+  border: 0;
+  box-shadow: 0 10px 10px -10px #8c8c8c inset;
+  margin-bottom: 6px;
 }
 
 .textBox {
@@ -18,6 +20,7 @@
 
 .text {
   width: 100%;
+  text-align: justify;
 }
 
 .roleStyle {
