--- a/styles/Program.module.css
+++ b/styles/Program.module.css
@@ -1,7 +1,12 @@
 .card {
   display: flex;
   flex-direction: column;
-  padding: 7px 0px;
+  margin: 50px;
+  color: white;
+  background: transparent;
+  @media (max-width: 900px) {
+    width: 300px;
+  }
 }
 
 .banner {
@@ -10,15 +15,34 @@
 }
 
 .headline {
-  font-size: xx-large;
+  font-size: 2.3rem;
   display: flex;
   justify-content: space-between;
+  font-family: LatoRegular;
 }
 
 .leftside {
-  font-size: x-large;
+  font-size: 2rem;
+  font-family: LatoRegular;
 }
 
-.info {
-  font-size: large;
+.information {
+  font-size: 1.4rem;
+  line-height: 2em;
+  font-family: LatoRegular;
+  inline-size: 1000px;
+}
+
+@media (max-width: 900px) {
+  .information {
+    padding-top: 15px;
+    inline-size: 320px;
+    font-size: 1.2rem;
+  }
+  .leftside {
+    font-size: 1.5rem;
+  }
+  .headline {
+    font-size: 1.7rem;
+  }
 }
