--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,7 +22,7 @@
 html,
 body {
   padding: 0;
-  background-color: #eaeaea;
+  background-color: #eeeeee;
   color: black;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
