--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -44,7 +44,7 @@
 
 .program {
   color: white;
-  font-family: LatoRegular;
+  font-family: "LatoRegular";
   margin-top: 4rem;
   font-size: 2.6em;
 }
@@ -57,6 +57,7 @@
   }
   .program {
     font-size: 2.4rem;
-    margin-left: 9rem;
+    display: flex;
+    justify-content: center;
   }
 }
